<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signUp.SignUpActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/background"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgSignup"
            android:layout_width="121dp"
            android:layout_height="104dp"
            android:layout_marginStart="145dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="145dp"
            android:src="@drawable/img_signup"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints"
            android:contentDescription="logar" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_rounded_corner"
            android:ems="10"
            android:hint="Nome"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:width="386dp"
            android:background="@drawable/ic_rounded_corner"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/txtCpf"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:width="386dp"
            android:background="@drawable/ic_rounded_corner"
            android:ems="10"
            android:hint="CPF"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_rounded_corner"
            android:hint="Senha"
            android:textColorHint="@color/hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rounded_corner"
                android:backgroundTint="@color/white"
                android:ems="15"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/swtNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:text="Deseja receber \n novidades por email"
            android:textColor="@color/white"
            android:thumbTint="@drawable/ic_newthumb"
            android:trackTint="@drawable/ic_newtrack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        android:background="@color/background"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0">

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="345dp"
            android:layout_height="69dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:width="280dp"
            android:backgroundTint="@color/orange"
            android:maxWidth="300dp"
            android:text="Registrar"
            android:textStyle="bold"
            app:circularflow_defaultRadius="185sp"
            app:cornerRadius="30dp"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="637dp" />
    </LinearLayout>

    <com.fiap.wallet.ui.shared.LoadingView
        android:id="@+id/loading_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:visible="false"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>